--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 				<div class="form-row">
 					<div class="col form-group">
 						<label for="email">Email*</label>
-						<input type="text" class="form-control" name="email" id="email" placeholder="Email">
+						<input type="text" class="form-control" name="email" id="email" placeholder="Email" autofocus>
 					</div>
 					<div class="col form-group">
 						<label for="password">Password*</label>
