--- a/templates/register.html
+++ b/templates/register.html
@@ -6,6 +6,7 @@
 	<div class="col">
 		<div class="container w-50">
 			<h2>Register</h2>
+			<div class="alert alert-warning d-none" role="alert"></div>
 			<form name="register" action="/register" method="POST">
 				<div class="form-row">
 					<div class="col form-group">
@@ -18,7 +19,8 @@
 					</div>
 					<div class="col form-group">
 						<label for="display_name">Display name</label>
-						<input type="text" class="form-control" name="display_name" id="display_name" placeholder="Display name">
+						<input type="text" class="form-control" name="display_name" id="display_name" placeholder="Display name" aria-describedby="display_name_help_block">
+						<small id="display_name_help_block" class="form-text text-muted">This is shown on exhibits you create and in any social interactions on Exhibitor. It defaults to your first and last name.</small>
 					</div>
 				</div>
 				<div class="form-row">
@@ -28,7 +30,8 @@
 					</div>
 					<div class="col form-group">
 						<label for="password">Password*</label>
-						<input type="password" class="form-control" name="password" id="password" placeholder="Password">
+						<input type="password" class="form-control" name="password" id="password" placeholder="Password" aria-describedby="password_help_block">
+						<small id="password_help_block" class="form-text text-muted">The password must be at least 6 characters long and have at least 1 uppercase letter, 1 lowercase letter, 1 number, and 1 symbol.</small>
 					</div>
 				</div>
 				<div class="form-row">
@@ -41,4 +44,10 @@
 	</div>
 </div>
 
+{% endblock %}
+
+{% block scripts%}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/client/common.js"></script>
+<script src="/client/authentication.js"></script>
 {% endblock %}
