--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,7 +1,8 @@
 {% set title = 'Editor' %}
 {% extends '_layout.html' %}
 
-{% block scripts_head %}
+{% block head %}
+	<link href="/client/css/interface.css" rel="stylesheet">
 	<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 	<script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
 	<script src="/client/graphics/globals.js"></script>
