--- a/templates/edit.html
+++ b/templates/edit.html
@@ -13,6 +13,7 @@
 
 {% block content %}
 	<a-scene cursor="rayOrigin: mouse" id="scene">
+		<a-sky color="#f8f8f8"></a-sky>
 		<a-assets>
 			<img id="grid-space" src="/client/textures/grid-space.png">
 			<img id="grid-space-green" src="/client/textures/grid-space-green.png">
@@ -68,7 +69,7 @@
 	</nav>
 	<div class="modal fade" role="dialog" id="media-modal">
 		<div class="modal-dialog modal-lg" role="document">
-			<div class="modal-content">
+			<div class="modal-content" v-if="mode == 'list'">
 				<div class="modal-header">
 					<h5 class="modal-title" id="modalLabel">Media</h5>
 					<button type="button" class="close" data-dismiss="modal">
@@ -93,9 +94,10 @@
 						
 						<div class="row mt-3" v-if="media.length > 0" v-for="n in rows">
 							<div class="col-md-3" v-for="file in show[n - 1]">
-								<div class="card">
-									<div class="card-body">
-										<h5 class="card-title"><% file.name %></h5>
+								<div class="card" v-on:click="select(file.gen_id)">
+									<img class="card-img-top" v-bind:src="'/file/thumbnail/' + file.gen_id" v-bind:alt="file.description" v-bind:title="file.description">
+									<div class="card-footer">
+										<% file.name %>
 									</div>
 								</div>
 							</div>
@@ -111,7 +113,74 @@
 					
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary"></button>
+					<button type="button" class="btn btn-secondary" v-on:click="mode = 'uploader'">Upload</button>
+				</div>
+			</div>
+			<div class="modal-content" v-if="mode == 'uploader'">
+				<div class="modal-header">
+					<h5 class="modal-title" id="modalLabel">Media Upload</h5>
+					<button type="button" class="close" data-dismiss="modal">
+						<span>&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div class="container-fluid">
+						<form name="media_upload" action="/upload" method="POST" id="media_upload" enctype="multipart/form-data" v-on:submit="upload_file">
+							<div class="form-row">
+								<div class="col form-group">
+									<label for="file_name">Name</label>
+									<input type="text" class="form-control" name="file_name" id="file_name" placeholder="File name">
+								</div>
+								<div class="col form-group">
+									<label for="file_description">Description</label>
+									<input type="text" class="form-control" name="file_description" id="file_description" placeholder="File description">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="custom-file">
+									<input type="file" class="custom-file-input" name="media_upload_file" id="media_upload_file">
+									<label class="custom-file-label" for="media_upload_file">Choose file*</label>
+								</div>
+							</div>
+							<div class="form-group">
+								<input type="submit" class="btn btn-primary" value="Upload">
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" v-on:click="mode = 'list'">Close uploader</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="modal-content" v-if="mode == 'place'">
+				<div class="modal-header">
+					<h5 class="modal-title" id="modalLabel">Place Media in Scene</h5>
+					<button type="button" class="close" data-dismiss="modal">
+						<span>&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div class="container-fluid">
+						<form name="media_place" action="#" method="GET" id="media_place" v-on:submit="place_media">
+							<div class="form-row">
+								<div class="col form-group">
+									<label for="plane_width">Plane Width</label>
+									<input type="text" class="form-control" name="plane_width" id="plane_width" value="2">
+								</div>
+								<div class="col form-group">
+									<label for="plane_height">Plane Height</label>
+									<input type="text" class="form-control" name="plane_height" id="plane_height" value="1">
+								</div>
+							</div>
+							<div class="form-group">
+								<input type="submit" class="btn btn-primary" value="Place">
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" v-on:click="mode = 'list'">Close placement tool</button>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -123,6 +192,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 
 	<script src="/client/graphics/grid.js"></script>
 	<script src="/client/toolbar.js"></script>
