Basic 2D media placement on walls.

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -25,11 +25,9 @@
 			<a-animation id="moveLeft" begin="moveLeft" attribute="position" from="" to=""></a-animation>
 		</a-entity>
 
-		<a-entity id="grid" rotation="-90 0 0">
-		</a-entity>
-		<a-box position="36 0 -32" scale="5 .5 .5" material="color: red"></a-box>
-		<a-box position="36 0 -32" scale=".5 5 .5" material="color: green"></a-box>
-		<a-box position="36 0 -32" scale=".5 .5 5" material="color: blue"></a-box>
+		<a-entity id="grid" rotation="-90 0 0"></a-entity>
+		<a-entity id="building"></a-entity>
+		<a-entity id="objects"></a-entity>
 
 		<a-sky color="#ECECEC"></a-sky>
 	</a-scene>
