--- a/templates/edit.html
+++ b/templates/edit.html
@@ -122,6 +122,7 @@
 					</button>
 				</div>
 				<div class="modal-body">
+					<div class="alert alert-warning" role="alert" v-if="alert.length > 0"><% alert %></div>
 					<div class="container-fluid">
 						<form name="media_upload" action="/upload" method="POST" id="media_upload" enctype="multipart/form-data" v-on:submit="upload_file">
 							<div class="form-row">
