Saving, deleting, some corner cases associated with each of those (such as if the user is in short wall view mode), and other minor additions.

--- a/default/css/interface.css
+++ b/default/css/interface.css
@@ -31,10 +31,18 @@
 	cursor: pointer;
 }
 
-.navbar {
+.a-enter-vr {
 	visibility: hidden;
 }
 
-.a-enter-vr {
-	visibility: hidden;
+#item_tools {
+	z-index: 10;
+	top: 20%;
+	left: 15px;
+	cursor: pointer;
+}
+
+._2d_only {
+	display: none;
+	list-style: none;
 }
