--- a/templates/view.html
+++ b/templates/view.html
@@ -2,13 +2,14 @@
 {% extends '_layout.html' %}
 
 {% block head %}
+	<link href="/client/css/embedded.css" rel="stylesheet">
 	<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 	<script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
 	<script src="/client/graphics/globals.js"></script>
 {% endblock%}
 
 {% block content %}
-	<a-scene id="scene">
+	<a-scene id="scene" embedded>
 		<a-sky color="#f8f8f8"></a-sky>
 		<a-assets>
 			<img id="floor-space" src="/client/textures/floor-space.png">
@@ -19,4 +20,9 @@
 
 		{{ exhibit.data.content|safe }}
 	</a-scene>
+{% endblock %}
+
+{% block scripts %}
+	<script src="/client/graphics/ceiling.js"></script>
+	<script src="/client/scene-height.js"></script>
 {% endblock %}
