--- a/templates/view.html
+++ b/templates/view.html
@@ -16,7 +16,7 @@
 			{{ exhibit.data.assets|safe }}
 		</a-assets>
 
-		<a-entity camera look-controls wasd-controls position="0 1.6 0" id="camera" far="20000"></a-entity>
+		<a-entity camera look-controls wasd-controls position="{{ exhibit.data.spawn_point }}" id="camera" far="20000"></a-entity>
 
 		{{ exhibit.data.content|safe }}
 	</a-scene>
